--- a/frontend/intervueai/package.json
+++ b/frontend/intervueai/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
     "html2pdf.js": "^0.10.3",
